# hilmi-assignment

./: MScAIM24_Assignment_1.ipynb  MScAIM24_Assignment_5.ipynb  MScAIM_Assignment_2.ipynb  MScAIM_Assignment_3.ipynb  MScAIM_Assignment_4.ipynb  README.md  Syn_data_2D.csv  main.py  pyproject.toml  test_motion.npy
